# ssolve

./: .clang-tidy  .clangd  .gitignore  LICENSE  Makefile.am  README.md  check-clang-tidy.sh  configure.ac  main.c
.github/workflows/: build.yml
data/: README.md
include/ssolve/: puzzle.h
src/: check.c  check.h  main.c  parse.c  parse.h  puzzle.c  puzzle.h
tests/: extract-puzzle.sh  hardest11.txt  runner.sh  stub.c
tests/cases/: check-easy1-with-violation.expected  check-easy1-with-violation.txt  check-easy1.expected  check-empty.expected  empty.expected  empty.txt  incomplete-row1.expected  incomplete-row2.expected  incomplete-row2.txt  invalid-full.expected  invalid-rows.expected
